# helloworld

./: .gitignore  Dockerfile  README.txt
.github/workflows/: cmake-single-platform.yml
doc/: cmake.txt
src/: CMakeLists.txt  main.cpp
src/mylibs/: CMakeLists.txt  mylib.cpp  mylib.hpp
util/: Dockerfile
